@@ -1,5 +1,10 @@
 2010-07-13  Jason Merrill  <jason@redhat.com>
 
+	PR c++/44909
+	* g++.dg/cpp0x/implicit6.C: New.
+
+2010-07-13  Jason Merrill  <jason@redhat.com>
+
 	PR c++/44540
 	* g++.dg/abi/noreturn1.C: New.
 	* g++.dg/abi/noreturn2.C: New.
